Implement PLAT010/011 Actor carrier substrate